2025-11-17  Zhengyi Fu  <i@fuzy.me>

	Remove some customizations on themes

	* init.el (dotemacs-theme-refresh): Remove some customizations.
	(dotemacs-theme-disable): Remove hooks.

2025-11-13  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Don't require gptel-tools.

2025-11-13  Zhengyi Fu  <i@fuzy.me>

	Replace homebrewed gptel-agent command by the gptel-agent package

	* site-lisp/gptel-tools.el: Moved to site-lisp/obsoletes/gptel-tools.el.
	* site-lisp/gptel-config.el (+gptel-read-documentation)
	(gptel-agent, gptel-agent--setup-context): Remove.
	(gptel-agent-backend, gptel-agent-model, "read_documentation"): Remove.
	* packages.el: Add package `gptel-agent'.
	* init.el: Remove autoloaded gptel-agent command.

2025-11-12  Zhengyi Fu  <i@fuzy.me>

	Fix error in gptel-tools

	* site-lisp/gptel-tools.el (gptel-tools--shell-command-confirm-p):
	Treat nil working-dir as `default-directory'.

2025-11-10  Zhengyi Fu  <i@fuzy.me>

	Use magit to show consult-git-log-grep's results

	* init.el (consult-git-log-grep-open-function): Set to `magit-show-commit'.
	(consult-git-log-grep-preview): Set to t.

2025-11-10  Zhengyi Fu  <i@fuzy.me>

	* packages.el: New package consult-git-log-grep.

2025-11-05  Zhengyi Fu <i@fuzy.me>

        gptel-config.el: Do not change global context

	* site-lisp/gptel-config.el (gptel-agent--setup-context): Make
	`gptel-context' buffer local variable.

2025-10-29  Zhengyi Fu  <i@fuzy.me>

	Hack to run on NixOS

	* site-lisp/telega-config.el  (telega-server-command): Do not set
	on NixOS.
	* packages.el: Do not install packages
	that depends on native libraries on NixOS.
	* early-init.el (emacs-is-installed-by-nix): New constant.
	Export exec-path to PATH if running in NixOS.

2025-10-17  Zhengyi Fu  <i@fuzy.me>

	Set correct type of warning

	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder-default-class):
	Change type of the warning to `fuzzy-finder'.

2025-10-14  Zhengyi Fu  <i@fuzy.me>
