@@ -1,3 +1,10 @@
+2025-11-19  Zhengyi Fu  <i@fuzy.me>
+
+	Add package `agenix'
+
+	* packages.el (agenix): New package.
+	* init.el (agenix-age-program): Set to "rage".
+
 2025-11-17  Zhengyi Fu  <i@fuzy.me>
 
 	Remove some customizations on themes
